# watchlist

./: .gitignore  README.md  pyproject.toml  requirements.txt
core/: settings.py  urls.py
core/common/: managers.py  models.py
core/common/management/commands/: does_soft_delete_works.py  seed.py
core/watchlist/: admin.py  apps.py  models.py  urls.py  views.py
core/watchlist/api/: serializers.py  urls.py  views.py
core/watchlist/migrations/: 0001_initial.py  0001_movie.py  0002_alter_movie_description.py  0002_alter_movie_is_deleted_and_more.py  0002_remove_streamingplatform_is_deleted_and_more.py  0003_alter_movie_is_deleted_and_more.py  0003_delete_movie.py  0003_remove_movie_is_deleted.py  0004_initial.py  0005_movie_platform.py  0006_alter_streamingplatform_website.py  0007_movie_is_deleted.py
